# surfer2

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  config.h.in
cc/: CMakeLists.txt  main.cpp
cc/test/: RunTestData.cpp
cmake/tests/: test_CGAL__Intersection_of_constraints_exception.cpp
gui/: CMakeLists.txt  InputGraphicsItem.cpp  InputGraphicsItem.h  KineticTriangulationGraphicsItem.cpp  KineticTriangulationGraphicsItem.h  MyQtThings.h  OffsetsGraphicsItem.cpp  OffsetsGraphicsItem.h  SkeletonGraphicsItem.cpp  SkeletonGraphicsItem.h  cgsurf.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  surfgui.h  surfgui.pro
surf/: CMakeLists.txt  surfconfig.h.in
surf/include/: surf.h  tools.h
surf/src/: BGLGraph.cpp  BGLGraph.h  BasicInput.cpp  BasicInput.h  BasicTriangulation.cpp  BasicTriangulation.h  CollapseSpec.cpp  CollapseSpec.h  EventQueue.cpp  EventQueue.h  Heap.h  KineticTriangle.cpp  KineticTriangle.h  KineticTriangulation.cpp  KineticTriangulation.h  SkeletonDCEL.cpp  SkeletonDCEL.h  SkeletonStructure.cpp  SkeletonStructure.h  TriangulationUtils.h  WavefrontEdge.cpp  WavefrontEdge.h  WavefrontSupportingLine.h  WavefrontVertex.cpp  WavefrontVertex.h  cgaltools.cpp  cgaltools.h  surf.cpp  tools.cpp
surf/test/: TestBGLGraph.cpp  TestHeap.cpp
test-data/: convex03.graphml  convex04.graphml  convex07.graphml  convex10.graphml  convex19.graphml  srpg0000025.graphml  srpg0000028.graphml  srpg_octo0000035.graphml  srpg_octo0000121.graphml
test-data/issue2/: issue2-minimal1.graphml  issue2-minimal1.ipe  srpg_octo0001664.graphml  srpg_octo_mc0007776.graphml  srpg_octo_mc0007776.line
test-data/real-world/: polygon-0001.graphml
test-data/special-cases/: collinear-split-event.graphml  collinear-split-event.ipe  degree-one-bevels-causing-splits.graphml  degree-one-bevels-causing-splits.ipe  degree-one-interior-1.graphml  degree-one-interior-1.ipe  degree-one-interior-2.graphml  degree-one-interior-2.ipe  degree-one-interior-3.graphml  degree-one-interior-3.ipe  degree-one-multi1-000.graphml  degree-one-multi2-000.graphml  degree-one-multi3-000.graphml  degree-one-multi4-000.graphml  degree-one-on-ch.graphml  degree-one-on-ch.ipe  degree-one-simple-000.graphml  degree-one-simple-001.graphml  degree-one-simple-002.graphml  degree-one-simple-003.graphml  iso-simple-1.graphml  iso-simple-1.ipe  iso-simple-2.graphml  iso-simple-2.ipe  iso-simple-3.graphml  iso-simple-3.ipe  multi-same-speed-event.graphml  multi-same-speed-event.ipe  same-speed-convex-hull-000.graphml  spoke-1.graphml  spoke-1.ipe  spoke-2.graphml  spoke-2.ipe  spoke-3.graphml  spoke-3.ipe
test-data/triggers-bugs/: srpg_octo0001664.line
test-data/weighted/: srpg_octo0000035-random-1.graphml  srpg_octo0000035-random-2.graphml  srpg_octo0000035-random-3.graphml
